2004-06-24  Matthias Wimmer  <m@tthias.net>

    * cygwin/dnsrv/dnsrv.c: use xhash instead of ghash
    * cygwin/dnsrv/dnsrv_coprocess.c: same
    * cygwin/dnsrv/srv_resolv.c: same
    * dialback/dialback.c: use xhash instead of ghash
    * dialback/dialback.h: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * dnsrv/dnsrv.c: same
    * dnsrv/srv_resolv.c: same
    * jabberd/config.c: same
    * jabberd/deliver.c: same
    * jabberd/jabberd.c: same
    * jabberd/log.c: same
    * jabberd/mio_ssl.c: same
    * jabberd/single.h: same
    * jabberd/base/base_dynamic.c: same
    * jabberd/lib/genhash.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/pool.c: same
    * jsm/deliver.c: same
    * jsm/jsm.c: same
    * jsm/jsm.h: same
    * jsm/users.c: same
    * jsm/util.c: same
    * jsm/modules/mod_admin.c: same
    * jsm/modules/mod_announce.c: same
    * pthsock/client.c: same
    * xdb_file/xdb_file.c: same
    * jabberd/lib/jid.c: cleanup on shutdown
    * jsm/modules/mod_filter.c: same

2004-06-15  Matthias Wimmer  <m@tthias.net>

    * configure.in: link against libresolv or libbind if required
    * dialback/Makefile.am: link against libjabberd
    * dnsrv/Makefile.am: same
    * jsm/Makefile.am: same
    * pthsock/Makefile.am: same
    * xdb_file/Makefile.am: same

2004-05-26  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.c: fix pool debug
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/pool.c: same

2004-05-23  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: send an xml:lang attribute in messages
    * jsm/modules/mod_admin.c: same
    * jsm/modules/mod_register.c: same
    * jabberd/base/base_accept.c: don't send <handshake/> after auth failure
    * jabberd/lib/jutil.c: valid priorities are in range [-128,127]
    * jsm/sessions.c: same
    * jsm/util.c: same
    * jsm/modules/mod_announce.c: same (and do not send to negative priority)
    * jsm/modules/mod_groups.c: same